--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
-/*.wrapper {
+
+
+./*wrapper {
   width:100%;
   display:grid;
   grid-template-columns: 50% 50%;
@@ -120,27 +122,7 @@ html, body {
 */
 
 
-@media (min-width:650px) {
-  #restaurants-list{
-    display:grid;
-    
-  grid-template-columns: 50% 50% ;
-  grid-gap:10px 10px;
-  grid-template-areas: "list list";
-  align-items: center;
-  justify-content: center;
 
-  }
-  #restaurants-list li {
-    grid-area: "list";
-  }
-.filter-options{
-  display: flex;
-  flex-direction:row;
-  align-items: center;
-  justify-content: center;
-}
-}
 /*@media screen and (min-width:650px) {
   #restaurants_list {
     grid-template-columns:200px 200px 200px;
@@ -157,7 +139,7 @@ body {
 	background-color: #fdfdfd;
 	margin: 0;
   position:relative;
-  max-width:100%;
+ 
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -183,8 +165,10 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 #maincontent {
+ 
   background-color: #f3f3f3;
   min-height: 100%;
+  display: inline-grid;
 }
 #footer {
   background-color: #444;
@@ -194,16 +178,21 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+ 
 }
 /* ====================== Navigation ====================== */
 nav {
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
   height: 80px;
   background-color: #252831;
   text-align:center;
+
 }
 nav h1 {
   margin: auto;
+  padding:15px;
 }
 nav h1 a {
   color: #fff;
@@ -256,6 +245,8 @@ nav h1 a {
   height: 50px;
   background-color: #3397DB;
   align-items: center;
+  padding:15px;
+
 }
 .filter-options h2 {
   color: white;
@@ -263,6 +254,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  padding:15px
 }
 .filter-options select {
   background-color: white;
@@ -275,9 +267,14 @@ nav h1 a {
   padding: 0 10px;
   width: 200px;
 }
+.filter-options select:focus {
+  outline: 2px solid;
+  outline-offset: 0px;
+}
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -293,10 +290,15 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+    
 }
+ ul#restaurants-list li {
+  display:inline-block;
+}
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
-  display: block;
+  display: inline;
   margin: 0;
   max-width: 100%;
   min-height: 248px;
@@ -328,13 +330,23 @@ nav h1 a {
   text-decoration: none;
   text-transform: uppercase;
 }
+#restaurants-list li a:focus {
+  outline-style: none;
+  border: 1px solid;
+}
 
 /* ====================== Restaurant Details ====================== */
+.inside #maincontent {
+  display: flex;
+  flex-wrap: wrap;
+}
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
+
+
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
@@ -389,6 +401,9 @@ nav h1 a {
   padding: 140px 40px 30px;
   width: 50%;
 }
+#restaurant-container{
+  display:inline;
+}
 #reviews-container {
   padding: 30px 40px 80px;
 }
@@ -412,7 +427,8 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: calc(100% - 8vw);
+  border-radius: 25px 0 25px 0;
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -420,3 +436,21 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+@media (max-width:445px) {
+ select#neighborhoods-select  {
+  grid-auto-rows: auto;
+ }
+ select#cuisines-select  {
+  grid-auto-rows: auto;
+}
+ }
+ 
+  
+@media (max-width:445px) {
+  .filter-options select{
+    grid-row:auto-flow /1fr 1fr;
+  }
+} 
+@media (max-width:600px) {
+ 
+} 
